--- a/src/views/styles/loginSignup.css
+++ b/src/views/styles/loginSignup.css
@@ -1,27 +1,33 @@
 .root{
-    background: rgb(13,73,114);
-    background: linear-gradient(150deg, rgba(13,73,114,1) 0%, rgba(26,1,28,1) 100%);
+    /* background-color : yellow; */
+    /* background: rgb(13,73,114); */
+    background: linear-gradient(150deg, rgba(13,73,114,1) 0%, rgba(26,1,28,1) 100%);    
+
+}
+
+.layout {
+    margin-left :  20% ;     
+    margin-right: 20% ;    
 }
 
 .center {
-    position: absolute;
+    position: relative;    
     top: 15%;
-    left: 20%;
-    right: 20%;
+    /* left: 20%; */
+    /* right: 20%; */
     z-index: 2;
-    margin: auto;
-    width: 60%;
-    height: 70%;
+    display: block;
+    margin: auto;    
+    /* height: 70%; */
     border-radius: 0.3cm;            
-  }
+}
 
 .photo_login {
     background-image: url("earth.jpg") ;
     background-position: center;
     background-size: cover;
-    width: 50%;
-    height: 100%;
-    border-radius: 0.3cm 0cm 0cm 0.3cm;    
+    width: 50%;    
+    border-radius: 0.3cm 0cm 0cm 0.3cm;   
     float: left;
 }
 
@@ -37,16 +43,16 @@
 
 .text_header {
     font-family: "Brush Script MT", cursive;
-    position: sticky;
+    position: relative;
     /* text-align: center; */
     font-size: 50px;
-    top: 20%;
+    top: 10%;
     color: white;
 }
 
 .text {    
-    position: sticky;    
-    top: 70%;    
+    position: relative;    
+    top: 50%;    
     font-size: 15px;
     color: white;
 }
@@ -55,7 +61,7 @@ button {
     color: white !important;
     position: sticky;
     text-align: center;
-    top: 75%;
+    top: 70%;
     background-color: white;
     border-color: white !important;
 }
