--- a/src/views/styles/explorePage.css
+++ b/src/views/styles/explorePage.css
@@ -9,4 +9,60 @@
      text-align: left;
   }
 
+  .ex{
+    align-items: center;
+    padding-left: 30%;
+   
+  }
+  .card {
+    position: relative;    
+  
+    align-items: center;
+    width: 70%;
+    height: 50%;
+  
+  }
+  .card-body {
+    padding: 0.5em 1.2em;
+  }
+  .card-title {
+    font-weight: bold;
+  }
+  .img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
+  .card img {
  
+    align-items: center;
+    /* border: 5px solid #555; */
+    width: 95%;
+    padding-top:5% ;
+    padding-right:5%;
+    padding-bottom: 5%;
+    border-top-right-radius: 0; 
+    border-bottom-left-radius: calc(0.25rem - 1px);
+    object-fit: cover; 
+    animation-name: fade-img;
+    animation-duration: 2s;
+    /* border: 2px solid #e3e3e3;
+    border-radius: 5px;  */
+   -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  }
+  .card {
+    margin: 0 auto; 
+    float: none; 
+    margin-bottom: 10px; 
+}
+
+.fade-img {
+  animation-name: fade-img;
+  animation-duration: 2s;
+}
+
+ .img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+  }
+  
