--- a/src/views/styles/loginSignup.css
+++ b/src/views/styles/loginSignup.css
@@ -6,10 +6,10 @@
   );
 }
 .centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
 }
 @keyframes signupform {
   0% {
@@ -64,6 +64,7 @@
   height: 70%;
 }
 .photo_login {
+  position: absolute;
   background-image: url("earth3.png");
   background-position: center;
   background-size: cover;
@@ -86,7 +87,6 @@
   font-style: italic;
   font-variant: normal;
   position: relative;
-  left: 38.6%;
   top: 7%;
   font-size: 40px;
   color: #a0a0a0;
@@ -96,7 +96,6 @@
 .buttonMain {
   color: #c0c0c0 !important;
   position: absolute;
-  left: 38.6%;
   top: 70%;
   text-align: center;
   border-color: #c0c0c0 !important;
