feat(forms): Get Email to reset password
Sends email to the given email address,
to reset their password(When clicked on forgot password).

--- a/src/views/styles/loginSignup.css
+++ b/src/views/styles/loginSignup.css
@@ -102,6 +102,9 @@
   border-radius: 0 !important;
   font-size: 13px !important;
 }
+.buttonMain:hover{
+  background-color: #c0c0c06b !important;
+}
 .loginform {
   background-color: black;
   width: 50%;
@@ -194,3 +197,6 @@
   color: navy;
   text-decoration-color: navy !important;
 }
+/* .forgotPasswordM{
+  background-color: rgb(7, 7, 83);
+} */
