--- a/src/views/styles/explorePage.css
+++ b/src/views/styles/explorePage.css
@@ -1,7 +1,8 @@
 
   .explore{
     align-items: center;
-    padding-left: 15%;
+    /* padding-left: 1%; */
+    padding-top: 10%;
     display: flex !important;
     position: relative;
      justify-content: center;
@@ -11,14 +12,14 @@
 
   .ex{
     align-items: center;
-    padding-left: 30%;
+    padding-left: 40%;
    
   }
   .card {
     position: relative;    
   
     align-items: center;
-    width: 70%;
+    width: 90%;
     height: 50%;
   
   }
@@ -65,4 +66,6 @@
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
   }
-  
+  a:link {
+    text-decoration: none;
+  }
