product (put together ) : fix errors

--- a/src/views/styles/loginSignup.css
+++ b/src/views/styles/loginSignup.css
@@ -156,7 +156,7 @@
   border-radius: 0%;
   border-style: dotted;
   border-width: 4px;
-  background-image: url("C:\GitHub\sharps pro\SharpsFront\src\views\styles\OIP.png");
+  background-image: url("OIP.png");
 }
 .invalid-feedback {
   color: rgb(119, 119, 177);
