product (put together ) : resolve some errors

--- a/src/views/styles/loginSignup.css
+++ b/src/views/styles/loginSignup.css
@@ -172,7 +172,7 @@
   border-radius: 0%;
   border-style: dotted;
   border-width: 2px;
-  background-image: url("C:\GitHub\sharps pro\SharpsFront\src\views\styles\error2.png");
+  background-image: url("error2.png");
 
   
 }
