--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
-.App {
+.App-day {
   text-align: center;
+  height: 100%;
+  width: 100%;
+  background-color: whitesmoke ;
 }
-
+.App-night{
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(7, 1, 36);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
