--- a/src/views/styles/loginSignup.scss
+++ b/src/views/styles/loginSignup.scss
@@ -95,7 +95,7 @@
     to {
       text-shadow: 0 0 20px #fff, 0 0 30px rgb(51, 51, 51),
         0 0 40px rgb(31, 31, 31), 0 0 50px rgb(0, 0, 0),
-        0 0 60px rgba(12, 12, 12);
+        0 0 60px rgb(12, 12, 12);
     }
   }
 .start-text1{
