--- a/src/views/styles/explorePage.css
+++ b/src/views/styles/explorePage.css
@@ -2,7 +2,7 @@
   .explore{
     align-items: center;
     /* padding-left: 1%; */
-    padding-top: 10%;
+    /* padding-top: 10%; */
     display: flex !important;
     position: relative;
      justify-content: center;
