feat ( responsive) : make dashboard responsive

--- a/src/views/styles/Dashboard.css
+++ b/src/views/styles/Dashboard.css
@@ -11,3 +11,28 @@
 .MuiContainer-maxWidthLg {
     max-width: 1700px !important;
 }
+
+.makeStyles-appBarShift-5{
+    margin-left: 240px;
+}
+
+.makeStyles-drawerPaper-9{
+    width: 240px ;
+}   
+
+@media only screen and (max-width: 600px) {
+
+    .MuiContainer-root{
+        display: none;        
+    }
+
+    .makeStyles-drawerPaper-9{
+        width: 200% ;
+        object-fit: fill;        
+    }   
+    
+    .makeStyles-appBarShift-5{
+        display: none !important;
+    }
+
+}
