--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,8 @@
   color: #61dafb;
 }
 
+@import url('../src/views/styles/Dashboard.css');
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
