--- a/src/views/styles/loginSignup.scss
+++ b/src/views/styles/loginSignup.scss
@@ -56,7 +56,7 @@
   width: 100%;
   height: 100%;
   .backgroundDiv{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-image: url("./bigdatalightblur2.png");
     background-repeat: no-repeat;
@@ -305,7 +305,7 @@
   width: 100%;
   height: 100%;
   .backgroundDiv{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-image: url("./bigdatadarkblur2.png");
     background-repeat: no-repeat;
