--- a/src/views/styles/edit_profile.css
+++ b/src/views/styles/edit_profile.css
@@ -124,7 +124,7 @@
     margin-bottom: 24 ;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     padding: 16 ;
     width: 800px;    
 }
