--- a/src/views/styles/explorePage.css
+++ b/src/views/styles/explorePage.css
@@ -1,104 +1,109 @@
+.explore{
+  align-items: center;
+  /* padding-left: 1%; */
+  padding-top: 10%;
+  display: flex !important;
+  position: relative;
+   justify-content: center;
+   flex-direction: column;
+   text-align: left;
+}
 
-  .explore{
-    align-items: center;
-    /* padding-left: 1%; */
-    padding-top: 10%;
-    display: flex !important;
-    position: relative;
-     justify-content: center;
-     flex-direction: column;
-     text-align: left;
-  }
-
-  .ex{
-    align-items: center;
-    padding-left: 40%;
-   
-  }
-  .card {
-    position: relative;    
-  
-    /* align-items: center;
-    width: 90%;
-    height: 50%; */
-  
-  }
-  .card-body {
-    padding: 0.5em 1.2em;
-  }
-  .card-title {
-    padding-top:3%;
-    font-weight: bold;
-  }
-  .img:hover {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-  }
-  .card img {
+.ex{
+  align-items: center;
+  padding-left: 40%;
  
-    align-items: center;
-    /* border: 5px solid #555; */
-    width: 95%;
-    padding-top:5% ;
-    padding-right:5%;
-    padding-bottom: 5%;
-    border-top-right-radius: 0; 
-    border-bottom-left-radius: calc(0.25rem - 1px);
-    object-fit: cover; 
-    animation-name: fade-img;
-    animation-duration: 2s;
-    /* border: 2px solid #e3e3e3;
-    border-radius: 5px;  */
-   -webkit-transform: scaleX(-1);
+}
+.card {
+  position: relative;    
+
+  /* align-items: center;
+  width: 90%;
+  height: 50%; */
+
+}
+.card-body {
+  padding: 0.5em 1.2em;
+}
+.card-title {
+  padding-top:3%;
+  font-weight: bold;
+}
+.img:hover {
+  -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
-  }
-  .card {
-    margin: 0 auto; 
-    float: none; 
-    margin-bottom: 10px; 
+}
+.card img {
+
+  align-items: center;
+  /* border: 5px solid #555; */
+  width: 95%;
+  padding-top:5% ;
+  padding-right:5%;
+  padding-bottom: 5%;
+  border-top-right-radius: 0; 
+  border-bottom-left-radius: calc(0.25rem - 1px);
+  object-fit: cover; 
+  animation-name: fade-img;
+  animation-duration: 2s;
+  /* border: 2px solid #e3e3e3;
+  border-radius: 5px;  */
+ -webkit-transform: scaleX(-1);
+transform: scaleX(-1);
+}
+.card {
+  margin: 0 auto; 
+  float: none; 
+  margin-bottom: 10px; 
 }
 
 .fade-img {
-  animation-name: fade-img;
-  animation-duration: 2s;
+animation-name: fade-img;
+animation-duration: 2s;
 }
 
- .img:hover {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
+.img:hover {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+a:link {
+  text-decoration: none;
+}
+
+
+
+
+.horizontal-card{
+  position:relative;
+  display: flex;
+  border:1px solid gray;
+  margin-bottom:1rem;
+}
+img{
+    width: 200px;
+    height: 200px;
+    /* border-bottom: 30px solid orange; */
+
   }
-  a:link {
-    text-decoration: none;
-  }
-  
-
-
-
-  .horizontal-card{
-    position:relative;
+  .card-horizontal {
     display: flex;
-    border:1px solid gray;
-    margin-bottom:1rem;
+    flex: 1 1 auto;
   }
-  img{
-      width: 200px;
-      height: 200px;
-      /* border-bottom: 30px solid orange; */
-  
+  .horizontal-card-body{
+    display: flex;
+    flex-direction: column;
+    margin-left:1rem;
+  }
+  .horizontal-card-footer{
+    /* position:absolute; */
+    left:0px;
+    right:0px;
+    margin-bottom:10px; 
+    /* height: 30px; */
+    display: flex;
+    align-items: center;}
+
+    .text-muted{
+      color: black;
+
     }
-    .horizontal-card-body{
-      display: flex;
-      flex-direction: column;
-      margin-left:1rem;
-    }
-    .horizontal-card-footer{
-      /* position:absolute; */
-      left:0px;
-      right:0px;
-      bottom:0px;
-      /* height: 30px; */
-      display: flex;
-      align-items: center;}
-   
-  
-  
