--- a/src/views/styles/explorePage.css
+++ b/src/views/styles/explorePage.css
@@ -10,6 +10,18 @@
      text-align: left;
   }
 
+  .searchFormPaper{
+    padding-left: 30px;
+    padding-right: 10px;
+    border-radius: 20px !important;
+    box-shadow: 0px 0px 1px 1px !important;
+  }
+
+  .MuiDialog-paperWidthSm{
+    max-width: 400px;
+    width: 250px !important;
+    text-align: center;
+  }
   .ex{
     align-items: center;
     padding-left: 40%;
