feat (edit profile) : move unblock component to edit profile page

--- a/src/views/styles/edit_profile.css
+++ b/src/views/styles/edit_profile.css
@@ -116,6 +116,11 @@
     width: 800px;    
 }
 
+.BlockedDomainsPaper {
+    padding-bottom : 10px ;
+    padding-top : 10px ;
+  }
+
 @media only screen and (max-width: 800px) {    
 
     .paper {        
