--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   text-align: center;
   height: 100%;
   width: 100%;
-  background-color: rgb(7, 1, 36);
+  background-color: rgba(1,3,5,255);
 }
 .App-logo {
   height: 40vmin;
@@ -35,8 +35,6 @@
 .App-link {
   color: #61dafb;
 }
-
-@import url('../src/views/styles/Dashboard.css');
 
 @keyframes App-logo-spin {
   from {
