--- a/src/App.css
+++ b/src/App.css
@@ -17,37 +17,36 @@
   background-color: rgba(1, 3, 5, 255);
   font-family: sitesFont;
 }
-.App-day-logo {
-  height: 40vmin;
-  pointer-events: none;
-  animation: App-logo-spin infinite 20s linear;
-}
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-  animation: App-logo-spin infinite 20s linear;
+
+::-webkit-scrollbar-track {
+  background-color: #ffffff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::-webkit-scrollbar {
+  width: 13px;
+  background-color: #f5f5f5;
 }
 
-.App-day-link {
-  color: #61dafb;
+::-webkit-scrollbar-thumb {
+  border-radius: 15px;
+  height: 150px;
+  background-color: #fff;
+  background-image: -webkit-linear-gradient(
+    90deg,
+    rgb(102, 173, 255) 5%,
+    rgb(102, 173, 255) 25%,
+    transparent 100%,
+    rgb(102, 173, 255) 75%,
+    transparent
+  );
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar-thumb:hover {
+  background-image: -webkit-linear-gradient(
+    90deg,
+    rgb(47, 118, 201) 5%,
+    rgb(47, 118, 201) 25%,
+    transparent 100%,
+    rgb(47, 118, 201) 75%,
+    transparent
+  );
 }
