--- a/src/views/styles/Dashboard.scss
+++ b/src/views/styles/Dashboard.scss
@@ -12,7 +12,7 @@
 		margin-left: 240px;
 	}
 	.makeStyles-drawerPaper-9 {		
-		background: linear-gradient(180deg, #44469ccb 0%, #ffffffcb 120%) !important;
+		background: linear-gradient(180deg, #44469c, #ffffffcb 120%) !important;
 		color: white !important;
 	}
 	.DrawerSpacer {
