--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   text-align: center;
   height: 100%;
   width: 100%;
-  background-color: rgba(1, 3, 5, 255);
+  background-color: #424242;
   font-family: sitesFont;
 }
 
