--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -1,3 +1,16 @@
+.inputBase {
+	width: 43vw !important;
+}	
+.searchFormPaper {
+	// padding-left: 30px;
+	// padding-right: 10px;
+	width: 50%;
+	height: 44px !important;		
+	border-radius: 8px !important;
+	border: 1px solid;
+	box-shadow: none !important;
+	z-index: 30;
+}
 .day{
 	.ex {
 		align-items: center;
@@ -10,13 +23,7 @@
 		justify-content: center;
 		flex-direction: column;
 		text-align: left;
-	}
-	.searchFormPaper {
-		padding-left: 30px;
-		padding-right: 10px;
-		border-radius: 20px !important;
-		box-shadow: 0px 0px 1px 1px !important;
-	}
+	}	
 	.MuiDialog-paperWidthSm {
 		max-width: 400px;
 		width: 250px !important;
@@ -83,7 +90,7 @@
 	.horizontal-card-body {
 		display: flex;
 		flex-direction: column;
-		margin-left: 1rem;
+		margin-left: 1rem;		
 	}
 	.horizontal-card-footer {
 		left: 0px;
@@ -98,6 +105,21 @@
 	
 }
 .night{
+	
+	.toolbar{
+		background-color: #424242;
+		border-bottom: 2px solid;
+		border-color: #6381B5;
+		// background:  rgba(0, 0, 0, 0.32) !important ;
+	}
+	.inputBase{
+		color: white;
+	}
+	.searchFormPaper{
+		background-color: #424242;
+		border-bottom: 2px solid;
+		border-color: #6381B5;		
+	}
 	.ex {
 		align-items: center;
 		padding-left: 40%;
@@ -110,12 +132,9 @@
 		flex-direction: column;
 		text-align: left;
 	}
-	.searchFormPaper {
-		padding-left: 30px;
-		padding-right: 10px;
-		border-radius: 20px !important;
-		box-shadow: 0px 0px 1px 1px !important;
-	}
+	.inputBase {
+		width: 43vw !important;
+	}		
 	.MuiDialog-paperWidthSm {
 		max-width: 400px;
 		width: 250px !important;
