feat (search)  : add search panel

--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -11,6 +11,14 @@
 	box-shadow: none !important;
 	z-index: 30;
 }
+.appBarSpacer {
+	height: 800px;
+}
+.popover {
+	// padding: 24px;
+	// height: 400px;
+	// width: 800px;
+}
 .day{
 	.ex {
 		align-items: center;
