feat (search) : add darkmode for serch bar

--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -127,24 +127,24 @@
 .night{
 // <<<<<<< HEAD
 	
-// 	.toolbar{
-// 		background-color: #424242;
-// 		border-bottom: 2px solid;
-// 		border-color: #6381B5;
-// 		// background:  rgba(0, 0, 0, 0.32) !important ;
-// 	}
-// 	.inputBase{
-// 		color: white;
-// 	}
-// 	.searchFormPaper{
-// 		background-color: #424242;
-// 		border-bottom: 2px solid;
-// 		border-color: #6381B5;		
-// 	}
+	.toolbar{
+		background-color: #424242;
+		border-bottom: 2px solid;
+		border-color: #6381B5;
+		// background:  rgba(0, 0, 0, 0.32) !important ;
+	}
+	.inputBase{
+		color: white;
+	}
+	.searchFormPaper{
+		background-color: #424242;
+		border-bottom: 2px solid;
+		border-color: #6381B5;		
+	}
 // =======
-	background-image: url("./bigdatadarkblur2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+// 	background-image: url("./bigdatadarkblur2.png");
+//     background-repeat: no-repeat;
+//     background-size: cover;
 // >>>>>>> ed5da9065e5249dd79220d5b8eb52db8dec4c86a
 	.ex {
 		align-items: center;
