feat (search) : add popover component for search -with bug

--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -15,9 +15,9 @@
 	height: 800px;
 }
 .popover {
-	// padding: 24px;
-	// height: 400px;
-	// width: 800px;
+	padding: 24px;
+	height: 400px;
+	width: 800px;
 }
 .day{
 	background-image: url("./bigdatalightblur2.png");
