--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -1,10 +1,17 @@
 .inputBase {
 	width: 43vw !important;
 }	
+.toolbar{
+	align-items: left	;
+}
+.accordeonRoot {
+	width: 100%;
+}
+
 .searchFormPaper {
 	// padding-left: 30px;
-	// padding-right: 10px;
-	width: 50%;
+	// padding-right: 10px;	
+	width: 79%;
 	height: 44px !important;		
 	border-radius: 8px !important;
 	border: 1px solid;
@@ -13,11 +20,6 @@
 }
 .appBarSpacer {
 	height: 800px;
-}
-.popover {
-	padding: 24px;
-	height: 400px;
-	width: 800px;
 }
 .day{
 	background-image: url("./bigdatalightblur2.png");
