--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -1,19 +1,30 @@
 .inputBase {
-	width: 63vw !important;
+	// width: 63vw !important;
 }	
 .toolbar{
 	align-items: left	;
 }
 .accordeonRoot {
-	width: 100%;
+	width: 99%;
 }
-.checkbox{
-	// margin : 0px ;
+.MuiAccordion-root{
+	margin-left : 57px !important ;
+	padding-left : 16px ;
+}
+.searchIcon{
+	height : 2px !important;
+	width : 2px !important;
+}
+.MuiToolbar-root{
+	padding : 0px !important;
+}
+.MuiIconButton-root{
+	// padding: 9px !important;
 }
 .searchFormPaper {
 	// padding-left: 30px;
 	// padding-right: 10px;	
-	width: 79%;
+	width: 76%;
 	height: 44px !important;		
 	border-radius: 8px !important;
 	border: 1px solid;
@@ -21,7 +32,7 @@
 	z-index: 30;
 }
 .appBarSpacer {
-	height: 800px;
+	height: 800px ;
 }
 .day{
 	background-image: url("./bigdatalightblur2.png");
