--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -1,6 +1,3 @@
-.inputBase {
-	// width: 63vw !important;
-}	
 .toolbar{
 	align-items: left	;
 }
@@ -18,9 +15,6 @@
 .MuiToolbar-root{
 	padding : 0px !important;
 }
-.MuiIconButton-root{
-	// padding: 9px !important;
-}
 .searchFormPaper {
 	// padding-left: 30px;
 	// padding-right: 10px;	
@@ -35,12 +29,15 @@
 	height: 800px ;
 }
 .day{
-	background-image: url("./bigdatalightblur2.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+	// background-image: url("./bigdatalightblur2.png");	
+    // background-repeat: no-repeat;
+    // background-size: cover;
 	.ex {
 		align-items: center;
 		padding-left: 40%;
+	}
+	.MuiCheckbox-colorSecondary.Mui-checked{
+		color : #44469c ;
 	}
 	.explore {
 		align-items: center;
@@ -150,14 +147,12 @@
 		border-bottom: 2px solid;
 		border-color: #6381B5;
 		// background:  rgba(0, 0, 0, 0.32) !important ;
-	}
-	.inputBase{
-		color: white;
-	}
+	}	
 	.searchFormPaper{
 		background-color: #424242;
 		border-bottom: 2px solid;
 		border-color: #6381B5;		
+		color : white !important ;
 	}
 // =======
 // 	background-image: url("./bigdatadarkblur2.png");
@@ -238,6 +233,12 @@
 			text-decoration-color: rgba(184, 217, 255, 0.877);
 		}
 	}
+	.MuiCheckbox-colorSecondary.Mui-checked{
+		color : white ;
+	}
+	.MuiCheckbox-colorSecondary{
+		color: white;
+	}
 	.card-text{
 		color: rgba(245, 245, 245, 0.67);
 		font-size: 19.5px;
@@ -255,6 +256,13 @@
 		display: flex;
 		flex: 1 1 auto;
 	}
+	.MuiSvgIcon-root{
+		color : #757575 !important;
+	}
+	.inputBase {
+		// width: 63vw !important;
+		color: white ;
+	}	
 	.horizontal-card-body {
 		display: flex;
 		flex-direction: column;
