--- a/src/App.scss
+++ b/src/App.scss
@@ -47,22 +47,25 @@
 	text-align: center;
 	height: 100%;
 	width: 100%;
-	background-color: rgba(1, 3, 5, 255);
+	background-color: #424242;
 	font-family: sitesFont;
   
 ::-webkit-scrollbar-track{
-  background-color: rgba(0, 0, 0, 0.75);
+  // background-color: rgba(0, 0, 0, 0.75);
+  background-color: #424242;
 }
 
 ::-webkit-scrollbar{
   width: 13px;
-  background-color: rgba(0, 0, 0, 0.75);
+  // background-color: rgba(0, 0, 0, 0.75);
+  background-color: #424242;
 }
 
 ::-webkit-scrollbar-thumb{
   border-radius: 15px;
   height: 150px;
-  background-color: rgba(0, 0, 0, 0.75);
+  // background-color: rgba(0, 0, 0, 0.75);
+  background-color: #424242;
   background-image: -webkit-linear-gradient(
     90deg,
     rgba(208, 225, 245, 0.685) 5%,
