--- a/src/views/styles/explorePage.scss
+++ b/src/views/styles/explorePage.scss
@@ -54,7 +54,7 @@
 	}
 	.view-page-button{
 		background-color: rgba(255, 255, 255, 0.65);
-		box-shadow: 0px 3px 7px 0px rgba(255, 255, 255, 0.5);
+		box-shadow: 0px 3px 7px 0px ;//rgba(255, 255, 255, 0.5);
 		color:  rgba(68, 68, 68, 0.55);	
 	}
 	.view-page-button:hover{
@@ -178,15 +178,20 @@
 	}
 	.view-page-button{
 		background-color: rgba(0, 0, 0, 0.75);
-		box-shadow: 0px 3px 7px 0px rgba(255, 255, 255, 0.5);
+		// box-shadow: 0px 3px 7px 0px ; // rgba(255, 255, 255, 0.5);
 		color:  rgba(184, 217, 255, 0.877);	
 	}
 	.view-page-button:hover{
 		background-color: rgba(68, 68, 68, 0.55);
 	}
 	.card {
-		background-color: rgba(0, 0, 0, 0.75);
-		box-shadow: 0px 3px 7px 0px rgba(255, 255, 255, 0.5);
+		// background-color: rgba(0, 0, 0, 0.75);
+		background-color: #424242;
+		// border : 0px ;
+		// border-bottom: 2px solid;
+		// border-color: #6381B5;
+		
+		box-shadow: 0.5px 3px 0.5px 0.5px; // rgba(255, 255, 255, 0.5);
 		position: relative;
 		margin: 0 auto;
 		float: none;
