--- a/src/views/styles/analytics.scss
+++ b/src/views/styles/analytics.scss
@@ -62,6 +62,8 @@
 .BlockedDomainsPaper {
   padding-bottom : 10px ;
   padding-top : 10px ;
+
+  height: 200px;
 }
 
 .paper{
@@ -72,7 +74,15 @@
 }
 
 .night {
-  .paper{
+  .MuiPaper-root{
+    background-color : #424242 ;
+    border-bottom: 2px solid;
+		border-color: #6381B5;
+    color: #999999 !important;    
+  }
+
+  .barChart{
+    
     background-color : #424242 ;
   }
 }
