feat (dashboard) : make colors lighter

--- a/src/views/styles/Dashboard.scss
+++ b/src/views/styles/Dashboard.scss
@@ -50,7 +50,8 @@
 		margin-left: 240px;
 	}
 	.makeStyles-drawerPaper-9 {		
-		background: linear-gradient(180deg, #44469c, #ffffff 120%) !important;
+		// background: linear-gradient(180deg, #44469c, #ffffff 120%) !important;
+		background: #44469c;
 		color: white !important;
 	}
 	.DrawerSpacer {
@@ -90,7 +91,8 @@
 	}
 	.makeStyles-drawerPaper-9 {		
 		// background: linear-gradient(180deg, #95bce9 0%, rgb(0, 0, 0) 105%) !important;
-		background: linear-gradient(180deg, rgba(63,81,181,1) 0%, rgba(0,0,0,1) 100%) !important;
+		// background: linear-gradient(180deg, rgba(63,81,181,1) 0%, rgba(0,0,0,1) 100%) !important;
+		background : rgba(63,81,181,1) ;
 		color: rgb(0, 0, 0) !important;
 	}
 	.DrawerSpacer {
